<resources>
    <string name="app_name">Task Reminder</string>
    <string name="company_name">Company Name</string>
    <string name="amount">Amount</string>
    <string name="add_task">Add Task</string>
    <string name="cheque_number">Cheque Number</string>

    <string name="notifications_admin_channel_name" translatable="false">Global channel</string>
    <string name="notifications_admin_channel_description" translatable="false">Notifications sent from the app admin
    </string>
    <string name="select_company">Select Company Name</string>
    <string name="data_is_empty">Data is Empty</string>
    <string name="select_date">Select Date</string>
    <string name="reminding_task">Reminding Task</string>
    <string name="login_in">Sign In</string>
    <string name="user_name">User Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confirmation_code">Confirmation Code</string>
</resources>
