<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="30dp"
        android:orientation="vertical"
        android:background="@android:color/white"
        tools:context=".activities.ReminderTaskActivity">
        <TextView
                android:id="@+id/remainder_task_title_id"
                android:text="@string/reminding_task"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
                android:id="@+id/remainder_task_date_id"
                android:hint="@string/select_date"
                android:focusable="false"
                android:cursorVisible="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <AutoCompleteTextView
                android:id="@+id/remainder_task_company_id"
                android:hint="@string/company_name"
                android:inputType="textCapWords|textPersonName|textNoSuggestions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                    android:id="@+id/remainder_task_cheque_id"
                    android:layout_marginTop="10dp"
                    android:hint="@string/cheque_number"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                    android:id="@+id/remainder_task_amount_id"
                    android:layout_marginTop="10dp"
                    android:hint="@string/amount"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </android.support.design.widget.TextInputLayout>

        <Spinner
                android:id="@+id/remainder_task_remind_id"
                android:layout_width="match_parent"
                android:layout_height="?android:actionBarSize"/>

        <Button
                android:id="@+id/remainder_task_btn_id"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:text="@string/add_task"
                android:background="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
</LinearLayout>