<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_orange_light"
        tools:context=".activities.LoginActivity">
    <android.support.v7.widget.CardView
            android:layout_centerInParent="true"
            app:cardElevation="6dp"
            app:cardCornerRadius="10dp"
            android:foregroundGravity="center"
            app:cardBackgroundColor="@color/window_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <LinearLayout
                android:orientation="vertical"
                android:layout_gravity="center"
                android:padding="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/login_title_id"
                    android:textSize="38sp"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="end"
                    android:text="@string/login_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <LinearLayout
                    android:id="@+id/login_layout_id"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <android.support.design.widget.TextInputLayout
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <EditText
                            android:id="@+id/login_user_name_id"
                            android:hint="@string/user_name"
                            android:inputType="textCapWords|textPersonName|textNoSuggestions"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <EditText
                            android:id="@+id/login_mobile_id"
                            android:hint="@string/mobile_number"
                            android:inputType="phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <AutoCompleteTextView
                            android:id="@+id/login_outlet_name_id"
                            android:hint="@string/company_name"
                            android:inputType="textCapWords|textPersonName|textNoSuggestions"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                </android.support.design.widget.TextInputLayout>
                <Button
                        android:id="@+id/login_login_btn_id"
                        android:layout_marginTop="10dp"
                        android:text="@string/login_in"
                        android:textColor="@android:color/white"
                        android:background="@color/colorAccent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>